--- a/Frontend/public/styles.css
+++ b/Frontend/public/styles.css
@@ -250,3 +250,16 @@ body{
     height: 600px;
     padding: 0 10%;
 }
+.success img{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 600px;
+    filter: brightness(30%);
+}
+.success h3,form{
+    position: relative;
+    color: white;
+    text-align: center;
+    padding-top: 50px;
+}
