--- a/Frontend/public/styles.css
+++ b/Frontend/public/styles.css
@@ -30,7 +30,7 @@ body{
     font-size: 12px;
     color: white;
     margin-top: 8px;
-    font-family: 'Lato', sans-serif !important;
+    font-family: 'Montserrat', sans-serif !important;
 }
 .topBar img{
     width: 14px;
@@ -262,4 +262,46 @@ body{
     color: white;
     text-align: center;
     padding-top: 50px;
+}
+.contactBG{
+    position: absolute;
+    display: block;
+    width: 100%;
+    height: 450px;
+    object-fit: cover;
+    filter: brightness(20%);
+}
+.contact{
+    text-align: center;
+    float: left;
+    width: 100%;
+}
+.contact p{
+    position: relative;
+    color: whitesmoke;
+    filter: brightness(70%);
+}
+.contact h6{
+    position: relative;
+    color: #df4002;
+    filter: brightness(70%);
+    font-size: 15px;
+}
+.contactIcons{
+    text-align: center;
+}
+.contactIcons a{
+    list-style-type: none;
+    overflow: hidden;
+    position: relative;
+}
+.contactIcons img{
+    width: 18px;
+    height: 18px;
+    margin: 20px;
+    filter: brightness(70%);
+}
+.contactLogo{
+    position: relative;
+    margin: 70px 20px 40px;
 }
